--- a/correction/styles.css
+++ b/correction/styles.css
@@ -40,6 +40,11 @@ h1 {
 	border-color: purple;
 }
 
+/*color*/
+h1, h2 {
+	color: #665d1b;
+}
+
 /*section*/
 main section {
 	margin-top: 100px;
@@ -50,9 +55,10 @@ main section {
 
 
 
+
 /*header*/
 #logo {
-	width: 75px;
+	width: 200px;
 }
 
 
@@ -97,7 +103,11 @@ main section {
 .sCContainer img {
 	width: 100%;
 	height: 200px;
-	object-fit: cover;
+	object-fit: contain;
+}
+
+.cSCompetence {
+	width: 25%;
 }
 
 .cSCompetenceH3 {
@@ -115,10 +125,11 @@ main section {
 
 /*footer*/
 footer {
-    background-color: #6e6b6b;
+    background-color: #665d1b;
     color: white;
     display: flex;
     justify-content: center;
+    margin-top: 60px;
 }
 
 .footerContainer {
